# jarvis

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.combined  Dockerfile.frontend  Dockerfile.llama  Dockerfile.orchestrator  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.split.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-camera-exe.yml  build-push.yml  ci.yml  deploy-pages.yml
camera/: .gitignore  README.md  ca.crt  config.example.json  get-ca.ps1  get-ca.sh  install.ps1  install.sh  requirements-desktop.txt  requirements.txt  run.ps1  run.sh  run_exe.py  service.ps1  service.sh  set-key.ps1  set-key.sh  setup.ps1  setup.sh
camera/jarvis_camera/: __init__.py  agent.py  app.py  bench.py  capture.py  enroll.py  events.py  facecli.py  keyfile.py  models.py  net.py  paths.py
camera/jarvis_camera/detectors/: faces.py  gestures.py  motion.py  pose.py
clients/volume-agent/: .gitignore  README.md  config.example.json  requirements.txt  volume_agent.py
config/: jarvis.docker.json  jarvis.example.json  schema.sql
docker/: all-in-one.sh  entrypoint.sh  llama-entry.sh  nginx.conf
docs/: API.md  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  DEPLOY.md  DIAGRAMS.md  FUTURE_IDEAS.md  Jarvis_Project_Documentation.md  KNOWN_ISSUES.md  README.md  RELEASES.md  SPECS.md  WORKFLOWS.md  analysis_results.md  analysis_results.md.metadata.json  changelog_update.md
docs/benchmarks/: whisper_base_en.txt  whisper_benchmark.txt  whisper_small_en.txt
docs/planning/: implementation_plan.md  task.md  walkthrough.md
docs/setup/: backup.md  camera.md  combined-image.md  docker.md  home-assistant.md  image-releases.md  orchestrator-image.md  quickstart.md  raspberry-pi.md  repository.md  server.md  tls.md  voice.md  volume-agent.md
edge/: .gitignore  README.md  config.example.json  requirements-desktop.txt  requirements.txt  setup.ps1  setup.sh
edge/jarvis_edge/: __init__.py  agent.py  bench.py  capture.py  enroll.py  events.py
edge/jarvis_edge/detectors/: __init__.py  base.py  faces.py  gestures.py  motion.py  pose.py
embed-cache/: .keep
frontend/: eslint.config.js  index.html
frontend/public/: 404.html  manifest.webmanifest  sw.js
frontend/src/: Admin.jsx  App.jsx  index.css  main.jsx
frontend/src/fonts/: fonts.css
licenses/gemma/: GEMMA_PROHIBITED_USE_POLICY.md  GEMMA_TERMS_OF_USE.md  NOTICE
models/: .keep
src/orchestrator/: auth.py  budget.py  chat.py  config.py  db.py  ha.py  intent_router.py  intents.py  llm.py  main.py  memory.py  onnx_embed.py  run_listener.sh
src/orchestrator/static/: admin.html  style.css
src/orchestrator/static/fonts/: README.md
src/scripts/: README.md  backup.sh  build_native.sh  download_models.sh  export_embed_onnx.py  fetch_fonts.py  harden_llama.sh  harden_service.sh  install_services.sh  load_env.sh  manage.py  piper_setup.sh  prepare_embed_cache.sh  reembed_memory.py  run.sh  run_listener.sh  setup-server.sh  setup.sh  setup_tls.sh  voice_bridge.py
systemd/: jarvis-orchestrator.hardened.service  jarvis-orchestrator.service  llama-fast.service
systemd/jarvis-orchestrator.service.d/: tls.conf
tests/: test_api.py  test_auth.py  test_budget.py  test_ha.py  test_inference_config.py  test_intent_router.py  test_intents.py  test_sessions.py
