[project]
name = "jarvis"
version = "0.1.0"
description = "Jarvis AI Orchestrator"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi",
    "sentence-transformers>=5.5.1",
    "torch",          # already pulled in by sentence-transformers; declared here to pin the CPU wheel
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27",   # FastAPI TestClient (tests/test_api.py)
]

# CPU-only PyTorch. This is a CPU deployment (no GPU), so route torch to the CPU wheel index — it drops
# ~5 GB of unused NVIDIA CUDA libraries the default wheel pulls in (which bloat the image and can fill
# the build host's disk). Embeddings run on CPU regardless.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/orchestrator"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# Pragmatic set: pyflakes (F) + syntax errors (E9) + bugbear (B).
select = ["F", "E9", "B"]
ignore = [
    "E501",  # line length — not enforced
    "B904",  # raise-from in handlers: HTTPException translations are intentional, chaining adds noise
    "B905",  # zip without strict=: used only over sequences of known-equal length
]
