[project]
name = "jarvis"
version = "2.6.0"
description = "Jarvis AI Orchestrator"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
# Torch-free since the ONNX embedding migration: the embedder runs on onnxruntime + tokenizers
# (see src/orchestrator/onnx_embed.py). torch/sentence-transformers are needed ONLY to (re)export
# the ONNX bundle — a one-time dev task run ephemerally, without touching these deps:
#   uv run --index https://download.pytorch.org/whl/cpu --with sentence-transformers \
#          --with onnx --with onnxscript python src/scripts/export_embed_onnx.py
dependencies = [
    "chromadb>=1.5.9",
    "fastapi",
    "numpy",          # vector math in onnx_embed + memory
    "onnxruntime",    # embedding inference (also required by chromadb)
    "tokenizers",     # torch-free tokenization for the ONNX embedder
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27",   # FastAPI TestClient (tests/test_api.py)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/orchestrator"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# Pragmatic set: pyflakes (F) + syntax errors (E9) + bugbear (B).
select = ["F", "E9", "B"]
ignore = [
    "E501",  # line length — not enforced
    "B904",  # raise-from in handlers: HTTPException translations are intentional, chaining adds noise
    "B905",  # zip without strict=: used only over sequences of known-equal length
]
